--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>springboot-generate</name>
     <description>代码生成工具</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>17</java.version>
         <druid.version>1.2.22</druid.version>
@@ -81,6 +82,11 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jsqlparser</groupId>
+            <artifactId>jsqlparser</artifactId>
+            <version>4.9</version>
         </dependency>
     </dependencies>
 
