--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,18 +2,18 @@ spring:
   datasource:
     name: mysql
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/my_batis?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/xxxx?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: Fan292852.
+    password: xxxxx
 server:
-  port: 8080
+  port: 9968
 mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 dull:
-  # 是否忽略表前缀
   table-prefix: true
   bean-query: Query
+#  path-base: /springboot/generate/uploadPath
   path-base: D:/AResourceData/testResources/
   package-base: com.dullfan.CodeTest
   author: DullFan
