修复表没有Comment报错

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
 
 dull:
-  table-prefix: true
+  table-prefix: false
   bean-query: Query
 #  path-base: /springboot/generate/
   path-base: D:/AResourceData/testResources/
